test/distributions/bradc/spsBlk/blocksparse-error-assign-zero.good
blocksparse-error-assign-zero.chpl:13: error: halt reached - attempting to assign a 'zero' value in a sparse array: (7)
